<resources>
    <string name="app_name">TAMM</string>
    <string name="select_lang">Please Choose \nYour <font fgcolor='#ffffff'>Language:</font></string>
    <string name="personal_assistant_app">IS YOUR PERSONAL\n ASSISTANCE APP</string>
    <string name="tamm_assistant_service">TAMM Assistance Services\n<center>For Visitors Company</center>\n(Your Personal Assistant)</string>
    <string name="family_message">Tamm Company is a Kuwaiti Services Company which communicate with its Customers all over the World, the Company established since 2017 which enables the customers to be locked in an enjoyable with Special Experience through our application, Call centre, Website, and the Social Media Channels.\n \n The company has been a leader in the concept of personal assistance required by the current and future lifestyle of individuals, companies or government entities in a luxurious manner.  The company provides its members with all the distinguished services provided by the personal assistant. The application consists of a sophisticated telephone application that includes the following services (tourism and aviation sector - delivery and car rental sector - Catering services, cinema reservations, e-shopping, all other concierge services, providing services for people with special needs, in order to get the services they need at anytime, anywhere 24 hours a day, 7 days a week.  Our Priority is our Customers and we are doing our best to have their Satisfactions Through over 100 well Trained Employees working in Shifts 7/24 to sell a wonderful experience full of happiness and beautiful memories.  Our specialized Team Quest to get the best Prices, Services, Comfort and Satisfaction for our Customers all over the world and focus at the destinations in high demand and they always make sure to serve our Customers with Professional Serving and highest quality to stay Trust worthy.  We are looking forward to being one of (Tamm) Family.   Yours sincerely,</string>
    <string name="authintication_text">FIRST, WE NEED TO\nBEGIN WITH THE\nREGISTRATION\nPROCESS, OR\nYOU CAN SIGN IN\nIF YOU’RE ALREADY\n.A MEMBER</string>
    <string name="sorgot_password">Forgot Password?</string>
    <string name="forgot_pass">Forgot\nPasswrod?</string>
    <string name="password_will_be_send">The password will be sent\nto your email address</string>
    <string name="success_send_email">The password has beed sent\nto your email address</string>
    <string name="plans_text">LET’S CHOOSE\nTHE RIGHT PLAN\nFOR YOU NOW!</string>
    <string name="plans_long_text">You can know more about the plans\nby clicking on them</string>
    <string name="plan_details_text">BECOME ONE OF SPECIAL VIP MEMBERSHIP TAMM FAMILY WITH SPECIAL RATES, DESCOUNTS AND GAIN FREE POINTS</string>
    <string name="plan_details_text_free">YOU CAN TRY WITH BEST OFFERS AND BEST PRICES WITH PROFESSIONAL SERVICES </string>
    <string name="sign_text" translatable="false">Already Have An Account ? <u>Sign in</u></string>
    <string name="title_activity_renew_account">RenewAccount</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="welcome_to">Welcome To</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="continue_">Continue</string>
    <string name="sign_in">sign in</string>
    <string name="register">Register</string>
    <string name="sign_in_as_a_guest">sign in as a guest</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="enter">ENTER</string>
    <string name="send_email">SEND EMAIL</string>
    <string name="proceed">Proceed</string>
    <string name="the_plans">The Plans</string>
    <string name="membership">Membership</string>
    <string name="accept">ACCEPT</string>
    <string name="membership_account_plan">MEMBERSHIP ACCOUNT PLAN</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="please_read_ncarefully_what_s_n_below_before_n_proceeding">PLEASE READ  CAREFULLY WHAT\'S  BELOW BEFORE   PROCEEDING!</string>
    <string name="free_account_plan">FREE ACCOUNT PLAN</string>
    <string name="by_choosing_this_plan_n_you_will_have_free_account_for_tamm_n_from_you_account">By choosing this plan,\n                     You will have free account for tamm \nfrom you account</string>
    <string name="get_this_plan">GET THIS PLAN</string>
    <string name="please_take_a_minute_to_sign_up">PLEASE TAKE A MINUTE TO  <font fgcolor="#BE973B">SIGN UP</font></string>
    <string name="first_name">FIRST NAME</string>
    <string name="last_name">LAST NAME</string>
    <string name="dob">DOB</string>
    <string name="dd_mm_yyy">DD      -      MM      -      YYYY</string>
    <string name="country">COUNTRY</string>
    <string name="city_province">CITY/PROVINCE</string>
    <string name="e_mail">E-MAIL</string>
    <string name="_965">+965</string>
    <string name="phone_number">PHONE NUMBER</string>
    <string name="occupation">OCCUPATION</string>
    <string name="special_needs">SPECIAL NEEDS</string>
    <string name="payment_method">PAYMENT METHOD</string>
    <string name="visa">Visa</string>
    <string name="i_agree_to_the_terms_amp_condition"><![CDATA[I agree to the Terms & Condition]]></string>
    <string name="proceed_to_checkout">PROCEED TO CHECKOUT</string>
    <string name="now_you_are_a_free_account_of">NOW YOU ARE A FREE ACCOUNT OF</string>
    <string name="tamm_community">TAMM COMMUNITY</string>
    <string name="enjoy_your_stay_amp_n_wait_for_the_deals_n_that_are_being_n_crafted_just_n_for_you">       ENJOY YOUR STAY&amp; \n    WAIT FOR THE DEALS\n             THAT ARE BEING\n                CRAFTED JUST\n                           FOR YOU</string>
    <string name="congratulations">CONGRATULATIONS</string>
    <string name="now_you_are_a_membership_of">NOW YOU ARE A MEMBERSHIP OF</string>
    <string name="hotels">HOTELS</string>
    <string name="best_hotels_deals">BEST HOTELS DEALS</string>
    <string name="with_special_assistance">WITH SPECIAL ASSISTANCE</string>
    <string name="anywhere">anywhere</string>
    <string name="anytime">, anytime</string>
    <string name="reserve_room">RESERVE ROOM</string>
    <string name="back">BACK</string>
    <string name="city">City</string>
    <string name="check_in">CHECK IN</string>
    <string name="check_out">CHECK OUT</string>
    <string name="nights">Nights</string>
    <string name="_1">1</string>
    <string name="find_hotels">FIND HOTELS</string>
    <string name="view_results">VIEW RESULTS</string>
    <string name="change_search">CHANGE SEARCH</string>
    <string name="checkout">CHECKOUT</string>
    <string name="guest_s_information">Guest information</string>
    <string name="adult">Adult</string>
    <string name="request">Request :</string>
    <string name="write_your_room_specification">Write your room specification</string>
    <string name="confirm">CONFIRM</string>
    <string name="please_set_your_payment">PLEASE SET YOUR PAYMENT</string>
    <string name="mastercard">MASTERCARD</string>
    <string name="knet">KNET</string>
    <string name="success">SUCCESS !</string>
    <string name="get_reservition_code">GET RESERVATION CODE</string>
    <string name="reserve_flight">RESERVE FLIGHT</string>
    <string name="tap_me_if_you_need_my_assistance">Tap me if you need MY ASSISTANCE</string>
    <string name="total_amount_kd_105_00">TOTAl AMOUNT : KD 105.00</string>
    <string name="thank_you_for_using">THANK YOU FOR USING</string>
    <string name="tamm_app">TAMM APP</string>
    <string name="hotel_booking">Hotel Booking</string>
    <string name="dear_mr">Dear Mr. ,</string>
    <string name="your_hotel_code_is">your Hotel code is</string>
    <string name="code">CODE</string>
    <string name="for_further_information">For further information</string>
    <string name="please_check_your_e_mail">Please check your E-mail.</string>
    <string name="back_to_home_page">BACK TO HOME PAGE</string>
    <string name="years"> %d years</string>
    <string name="months"> %d months</string>
    <string name="days"> %d days</string>
    <string name="offers">Offers</string>
    <string name="favorites">Favorites</string>
    <string name="conversation">Conversation</string>
    <string name="setting">Setting</string>
    <string name="about_us">About us</string>
    <string name="contacts_us">Contacts us</string>
    <string name="log_out">Log out</string>
    <string name="subject">SUBJECT</string>
    <string name="message">Message</string>
    <string name="please_take_a_minute_to">PLEASE TAKE A MINUTE TO</string>
    <string name="contact_us">CONTACT US</string>
    <string name="if_you_have_more_detailed_feedback_to_share_drop_on_email_to">If you have more detailed feedback to share,drop on email to</string>
</resources>