<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

    <group android:checkableBehavior="single">



        <item
            android:id="@+id/nav_offer"
            android:icon="@drawable/offer"
            android:title="@string/offers"

            />



        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/star"
            android:title="@string/favorites"

            />

        <item
            android:id="@+id/nav_conversation"
            android:icon="@drawable/ic_message"
            android:title="@string/conversation" />

        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_settings"
            android:title="@string/setting" />

        <item
            android:id="@+id/nav_aboutus"
            android:icon="@drawable/tamm"
            android:title="@string/about_us" />

        <item
            android:id="@+id/nav_contuctus"
            android:icon="@drawable/ic_mail"
            android:title="@string/contacts_us" />

        <item
            android:id="@+id/nav_terms"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/terms_and_conditions" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/log_out" />


    </group>


    <group android:enabled="false">

        <item android:title="Tamm \u00A9 2018"></item>

    </group>


</menu>