<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".SignInFragment">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/welcome_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize">

        <ImageView
            android:id="@+id/back_pressed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_back_arrow"
            android:layout_marginTop="15dp"/>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:padding="16dp">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/logo"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"/>

        <EditText
            android:id="@+id/tv_signin_username"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:background="@drawable/border"
            android:hint="@string/username"
            android:textColorHint="#FFF"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="#FFF"/>

        <EditText
            android:id="@+id/tv_signin_password"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:background="@drawable/border"
            android:hint="@string/password"
            android:layout_gravity="center"
            android:layout_marginTop="3dp"
            android:inputType="textPassword"
            android:textColorHint="#FFF"
            android:gravity="center"
            android:textColor="#FFF"/>

        <TextView
            android:id="@+id/goto_forgot_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sorgot_password"
            android:gravity="center"
            android:clickable="true"
            android:textColor="#FFF"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"/>

    </LinearLayout>
    
    <Button
        android:id="@+id/btn_sign_in_user"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/enter"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:textColor="#FFF"
        android:background="@drawable/border"/>



</RelativeLayout>