<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".fragments.LanguangeFragment">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="20dp"
        android:layout_above="@id/image_person"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/tv_choose_lang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_lang"
            android:textColor="#BE973B"
            android:textSize="22sp"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal" />

        <Button
            android:id="@+id/btn_choose_english"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/english"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/border"
            android:textColor="#FFF"/>

        <Button
            android:id="@+id/btn_choose_arabic"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/arabic"
            android:layout_gravity="center"

            android:layout_marginTop="5dp"
            android:background="@drawable/border"
            android:textColor="#FFF"/>


    </LinearLayout>

    <ImageView
        android:id="@+id/image_person"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_above="@id/tv_copyright"
        android:layout_marginBottom="10dp"
        android:scaleType="fitCenter"
        android:src="@drawable/language_bottom_image" />

    <TextView
        android:id="@+id/tv_copyright"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/splash_background"
        android:fontFamily="Open"
        android:gravity="center"
        android:text="Copyright Tamm \u00A9 2018"
        android:textColor="#000"
        android:textSize="10sp" />

</RelativeLayout>