<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/plans_background1"
    android:orientation="vertical"
    tools:context=".fragments.PlansFragment">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/welcome_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize">

        <LinearLayout
            android:id="@+id/back_pressed"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_back_arrow"
                android:layout_marginTop="15dp"/>
            <TextView
                android:id="@+id/back_pressed_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="BACK"
                android:textColor="@color/white"
                android:layout_marginTop="15dp"
                android:layout_marginStart="@dimen/_15sdp"/>
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>


    <RelativeLayout
        android:layout_below="@+id/welcome_toolbar"
        android:id="@+id/_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">


        <ImageView

            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_120sdp"
            android:src="@drawable/plans_image" />


        <TextView
            android:layout_width="200dp"
            android:layout_height="82dp"
            android:layout_alignBottom="@+id/imageView2"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/_180sdp"
            android:layout_marginTop="@dimen/_34sdp"
            android:layout_marginEnd="@dimen/_3sdp"
            android:layout_marginBottom="@dimen/_50sdp"
            android:text="@string/please_read_ncarefully_what_s_n_below_before_n_proceeding"
            android:textColor="#FFF"
            android:textSize="@dimen/_10ssp" />


        <ImageView
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_60sdp"
            android:layout_alignBottom="@+id/imageView2"
            android:layout_marginStart="@dimen/_130sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_150sdp"
            android:layout_marginBottom="@dimen/_90sdp"
            android:src="@drawable/ic_quotation_mark" />

        <ImageView
            android:id="@+id/iv_logo_black"
            android:layout_width="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_below="@+id/imageView2"
            android:layout_centerHorizontal="true"
            android:src="@drawable/logo_black"

            />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_logo_black"
            android:gravity="center"
            android:text="@string/membership_account_plan"
            android:textColor="@color/app_color"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView1"
            android:gravity="center"
            android:text="@string/terms_and_conditions"
            android:textColor="@color/app_color"
            android:textStyle="bold" />

        <ScrollView
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp"
            android:layout_below="@+id/textView11">

            <RelativeLayout
                android:id="@+id/layout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="#fff" />

            </RelativeLayout>

        </ScrollView>

    </RelativeLayout>


    <Button
        android:id="@+id/btn_register_signup"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/_1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_4sdp"
        android:background="@drawable/border"
        android:text="@string/accept"
        android:textColor="#FFF"
        />


</RelativeLayout>
